# dbusnotifications

./: .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  README  config.inc  dbusnotifications.pri  dbusnotifications.pro  dbuspopuphandler.cpp  dbuspopuphandler.h  definitions.h  idbusnotifications.h  install.cmake  translations.cmake  tsrelease.bat  tsrelease.sh  tsupdate.bat  tsupdate.sh
doc/: AUTHORS  INSTALL  README
resources/menuicons/shared/: dbusnotifications.def.xml
translations/.tx/: config
translations/de/: dbusnotifications.ts
translations/en/: dbusnotifications.ts
translations/pl/: dbusnotifications.ts
translations/ru/: dbusnotifications.ts
translations/src/ru_RU/: dbusnotifications.ts
translations/uk/: dbusnotifications.ts
